Added "package subdir" jobs, and worked out the resulting kinks.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -21,13 +21,24 @@ stable_timer_seconds = stable_timer_hours * 60 * 60
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
-lsb_archs = ["x86", "x86_64", "ia64", "ppc32", "ppc64", "s390", "s390x"]
+lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
-lsb_pkg_subdir_projects = ["makelsbpkg"]
+lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
+                           "azov-xml2-tests", "desktop-test", "dtk-manager", 
+                           "libstdcpp-test", "lsb-setup", "lsb-xvfb", 
+                           "lsbappchk-perl", "lsbappchk-python", 
+                           "lsbappchk-sh", "lsbsi-fonts", "lsbsi-tools", 
+                           "makelsbpkg", "olver-core-tests", "perl-test",
+                           "printing-test", "python-test", "qmtest-harness",
+                           "runtime-test", "t2c-cpp-tests", 
+                           "t2c-desktop-tests", "task-pkgs", "tet-harness", 
+                           "xts5-test"]
 lsb_packaging_projects = [("lsbappchk", "misc-test")]
 
-lsb_arch_indep_projects = ["makelsbpkg"]
+lsb_arch_indep_projects = ["makelsbpkg", "lsb-setup", "lsbappchk-perl", 
+                           "lsbappchk-python", "lsbappchk-sh", "perl-test", 
+                           "printing-test", "python-test", "task-pkgs"]
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
@@ -265,16 +276,22 @@ for arch in lsb_archs:
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=4*60*60))
-        b.addStep(LSBBuildPackage())
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-        b.addStep(ShellCommand(command="cp package/*.rpm ../results"))
+        b.addStep(LSBBuildPackage(), name="build")
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
+                               name="clear-old-results"))
+        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
+                               name="create-results-dir"))
+        b.addStep(ShellCommand(command="cp package/*.rpm ../results",
+                               name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                        "../results"]))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+                                        "../results"],
+                               name="pack-results"))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                               name="clear-results-dir"))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
                              masterdest="%s-results-%s.tar.gz" % (prj, 
-                                                                  build_arch)))
+                                                                  build_arch),
+                             name="upload-results"))
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -297,22 +314,31 @@ for arch in lsb_archs:
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % repo,
                       workdir=repo, mode="update", timeout=4*60*60))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
+                               name="clear-old-packaging"))
         b.addStep(ShellCommand(
                 command=["bzr", "checkout", 
                          os.path.join(bzr_toplevel, "lsb/devel/packaging"),
-                         "../packaging"]))
+                         "../packaging"],
+                name="checkout-packaging"))
         b.addStep(LSBBuildFromPackaging(subdir=prj,
-                                        env={"BZRTREES": ".."}))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-        b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj))
+                                        env={"BZRTREES": ".."},
+                                        name="build"))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                               name="clear-old-results"))
+        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
+                               name="make-results-dir"))
+        b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj,
+                               name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                        "../results"]))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+                                        "../results"],
+                               name="pack-results"))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                               name="clear-results-dir"))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
                              masterdest="%s-results-%s.tar.gz" % (prj, 
-                                                                  build_arch)))
+                                                                  build_arch),
+                             name="upload-results"))
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
