Add dependencies to LSB builds.
A dependency is where one project needs another one installed to build.  
Dependencies are declared at the top of the file.  Depended-upon 
projects get installed after their build, and its dependent projects are 
then triggered to be rebuilt immediately.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -3,6 +3,23 @@
 
 import os
 
+from buildbot import scheduler
+from buildbot.buildslave import BuildSlave
+from buildbot.process import factory
+from buildbot.steps import trigger
+from buildbot.steps.shell import ShellCommand
+from buildbot.steps.master import MasterShellCommand
+from buildbot.steps.source import Bzr
+from buildbot.steps.transfer import FileUpload
+from buildbot.process.properties import WithProperties
+from buildbot.status import html
+from buildbot.status import words
+
+from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
+    LSBBuildFromPackaging
+
+from bzr_buildbot import BzrPoller
+
 # This buildbot config file defines the LSB builds that are needed.
 # 
 # Each project needs one build per architecture; this includes the
@@ -36,13 +53,39 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "xts5-test"]
 lsb_packaging_projects = [("lsbappchk", "misc-test")]
 
-lsb_arch_indep_projects = ["makelsbpkg", "lsb-setup", "lsbappchk-perl", 
-                           "lsbappchk-python", "lsbappchk-sh", "perl-test", 
-                           "printing-test", "python-test", "task-pkgs"]
+lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
+                           "lsbappchk-sh", "perl-test", "task-pkgs"]
+
+lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
+                                     "azov-xml2-tests", "desktop-test", 
+                                     "printing-test", "runtime-test", 
+                                     "t2c-cpp-tests", "t2c-desktop-tests", 
+                                     "xts5-test"],
+                     "qmtest-harness": ["libstdcpp-test"],
+                     "lsbappchk-python": ["python-test"] }
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
 lsb_buildslave_arch_indep_arch = "x86_64"
+
+# Helper functions
+
+def add_dependency_triggers(project, arch, builder):
+    pkg_install_command = \
+        "ls ../results/*.rpm | egrep -v src.rpm | xargs sudo rpm -Uvh"
+    if project in lsb_dependencies:
+        prj_name = "%s-%s" % (project, arch)
+
+        builder.addStep(ShellCommand(command=pkg_install_command, 
+                                     name="update-pkgs",
+                                     flunkOnFailure=False))
+
+        for subprj in lsb_dependencies[project]:
+            subprj_name = "%s-%s" % (subprj, arch)
+            builder.addStep(
+                trigger.Trigger(name="trigger-" + subprj_name,
+                                schedulerNames=['trigger-' + subprj_name],
+                                waitForFinish=False, updateSourceStamp=False))
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -54,7 +97,6 @@ c = BuildmasterConfig = {}
 # the 'slaves' list defines the set of allowable buildslaves. Each element is
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
-from buildbot.buildslave import BuildSlave
 c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=1),
                BuildSlave("lfbuild-x86", "ail1Aebu", max_builds=1),
                BuildSlave("lfbuild-ia64", "quae7Moh", max_builds=1),
@@ -78,8 +120,6 @@ c['slavePortnum'] = 9988
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes. Any class which implements IChangeSource can be
 # put here: there are several in buildbot/changes/*.py to choose from.
-
-from bzr_buildbot import BzrPoller
 
 c['change_source'] = []
 lsb_change_sources = lsb_pkg_subdir_projects + \
@@ -118,8 +158,6 @@ for branch in lsb_change_sources:
 
 ## configure the Schedulers
 
-from buildbot import scheduler
-
 # LSB schedulers
 
 c['schedulers'] = []
@@ -145,6 +183,13 @@ for prj in lsb_pkg_subdir_projects:
                                   builderNames=[prj_name],
                                   treeStableTimer=stable_timer_seconds)
         c['schedulers'].append(sch)
+
+        for deplist in lsb_dependencies.itervalues():
+            if prj in deplist:
+                sch = scheduler.Triggerable(name="trigger-" + prj_name,
+                                            builderNames=[prj_name])
+                c['schedulers'].append(sch)
+                break
 
 for (prj, repo) in lsb_packaging_projects:
     if prj in lsb_arch_indep_projects:
@@ -200,16 +245,6 @@ for (prj, repo) in lsb_packaging_projects:
 #      'factory': f1,
 #      }
 #c['builders'] = [b1]
-
-from buildbot.process import factory
-from buildbot.steps.shell import ShellCommand
-from buildbot.steps.master import MasterShellCommand
-from buildbot.steps.source import Bzr
-from buildbot.steps.transfer import FileUpload
-from buildbot.process.properties import WithProperties
-
-from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
-    LSBBuildFromPackaging
 
 # LSB builds
 
@@ -276,7 +311,7 @@ for arch in lsb_archs:
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=4*60*60))
-        b.addStep(LSBBuildPackage(), name="build")
+        b.addStep(LSBBuildPackage(name="build"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
@@ -286,12 +321,13 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
-                               name="clear-results-dir"))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
                              masterdest="%s-results-%s.tar.gz" % (prj, 
                                                                   build_arch),
                              name="upload-results"))
+        add_dependency_triggers(prj, build_arch, b)
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                               name="clear-results-dir"))
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -333,12 +369,13 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
-        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
-                               name="clear-results-dir"))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
                              masterdest="%s-results-%s.tar.gz" % (prj, 
                                                                   build_arch),
                              name="upload-results"))
+        add_dependency_triggers(prj, build_arch, b)
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                               name="clear-results-dir"))
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -358,10 +395,8 @@ c['builders'] = lsb_builds
 
 c['status'] = []
 
-from buildbot.status import html
 c['status'].append(html.WebStatus(http_port=8009, allowForce=False))
 
-from buildbot.status import words
 c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="lsb_bb",
                              channels=["#lsb"], allowForce=True,
                              notify_events={'exception': 1,
