Add rest of projects from packaging to LSB.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -51,7 +51,12 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "runtime-test", "t2c-cpp-tests", 
                            "t2c-desktop-tests", "task-pkgs", "tet-harness", 
                            "xts5-test"]
-lsb_packaging_projects = [("lsbappchk", "misc-test")]
+lsb_packaging_projects = [("lsbappchk", "misc-test"),
+                          ("lsbarchk", "misc-test"),
+                          ("lsbcmdchk", "misc-test"),
+                          ("lsbdev-runner", "build_env"),
+                          ("lsblibchk", "misc-test"),
+                          ("lsbpkgchk", "misc-test")]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
