Fix arch-indep status of some LSB projects.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -59,7 +59,8 @@ lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbpkgchk", "misc-test")]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
-                           "lsbappchk-sh", "perl-test", "task-pkgs"]
+                           "lsbappchk-sh", "lsbsi-fonts", "perl-test",
+                           "task-pkgs"]
 
 lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
                                      "azov-xml2-tests", "desktop-test", 
