Initial attempt at an appbat job.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -7,7 +7,7 @@ from buildbot import scheduler
 from buildbot.buildslave import BuildSlave
 from buildbot.process import factory
 from buildbot.steps import trigger
-from buildbot.steps.shell import ShellCommand
+from buildbot.steps.shell import ShellCommand, Configure, Compile
 from buildbot.steps.master import MasterShellCommand
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
@@ -45,7 +45,7 @@ lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "azov-xml2-tests", "desktop-test", "dtk-manager", 
                            "libstdcpp-test", "lsb-setup", "lsb-xvfb", 
                            "lsbappchk-perl", "lsbappchk-python", 
-                           "lsbappchk-sh", "lsbsi-fonts", "lsbsi-tools", 
+                           "lsbappchk-sh", "lsbsi-tools", 
                            "makelsbpkg", "olver-core-tests", "perl-test",
                            "printing-test", "python-test", "qmtest-harness",
                            "runtime-test", "t2c-cpp-tests", 
@@ -59,8 +59,7 @@ lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbpkgchk", "misc-test")]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
-                           "lsbappchk-sh", "lsbsi-fonts", "perl-test",
-                           "task-pkgs"]
+                           "lsbappchk-sh", "perl-test", "task-pkgs"]
 
 lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
                                      "azov-xml2-tests", "desktop-test", 
@@ -68,7 +67,8 @@ lsb_dependencies = { "tet-harness": ["azov-qt3-tests", "azov-qt4-tests",
                                      "t2c-cpp-tests", "t2c-desktop-tests", 
                                      "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
-                     "lsbappchk-python": ["python-test"] }
+                     "lsbappchk-python": ["python-test"],
+                     "libbat": ["appbat"] }
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
@@ -129,7 +129,7 @@ c['slavePortnum'] = 9988
 
 c['change_source'] = []
 lsb_change_sources = lsb_pkg_subdir_projects + \
-    [x[1] for x in lsb_packaging_projects]
+    [x[1] for x in lsb_packaging_projects] + ["appbat"]
 added = []
 for branch in lsb_change_sources:
     if branch in added:
@@ -175,7 +175,14 @@ for arch in lsb_archs:
     sch_update = scheduler.Dependent(name="update-sdk-" + arch,
                                      upstream=sch_build,
                                      builderNames=["update-sdk-" + arch])
-    c['schedulers'].extend([sch_build, sch_update])
+    sch_libbat = scheduler.Scheduler(name="sch-libbat-" + arch,
+                                     branch="lsb/devel/appbat",
+                                     builderNames=["libbat-" + arch],
+                                     treeStableTimer=stable_timer_seconds)
+    sch_appbat = scheduler.Triggerable(name="sch-appbat-" + arch,
+                                       builderNames=["appbat-" + arch])
+
+    c['schedulers'].extend([sch_build, sch_update, sch_libbat, sch_appbat])
 
 for prj in lsb_pkg_subdir_projects:
     if prj in lsb_arch_indep_projects:
@@ -258,6 +265,11 @@ lsb_builds = []
 indep_added = []
 
 for arch in lsb_archs:
+    # SDK.  This is unique because it is used to build everything else.  So
+    # we have to build it with a known good SDK, install it, and use that
+    # to build everything else.  There are two separate jobs here: build
+    # the SDK, and install it.
+
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
                                                "lsb/devel/packaging"),
@@ -301,6 +313,11 @@ for arch in lsb_archs:
           'builddir': 'update-sdk-' + arch, 'factory': update_sdk, 
           'category': 'lsb' })
 
+    # "Package subdir" projects.  These have a "package" directory in
+    # them; to build their packages, you go to the package directory
+    # and type "make".  (Well, more than that; see the custom builder
+    # class we use.)
+
     for prj in lsb_pkg_subdir_projects:
         if prj in lsb_arch_indep_projects:
             if prj in indep_added:
@@ -339,6 +356,10 @@ for arch in lsb_archs:
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
               'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
               'category': 'lsb' })
+
+    # "Packaging" projects.  These are actually built from a separate
+    # bzr tree, called "packaging", which contains the instructions for
+    # building those packages.
 
     for (prj, repo) in lsb_packaging_projects:
         if prj in lsb_arch_indep_projects:
@@ -387,6 +408,44 @@ for arch in lsb_archs:
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
               'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
               'category': 'lsb' })
+
+    # Weird builds.  These don't conform to one of the patterns, and
+    # so have to be custom.
+
+    libbat = factory.BuildFactory()
+
+    libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
+                       workdir="appbat", mode="copy", timeout=4*60*60))
+    libbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
+                                workdir="appbat"))
+    libbat.addStep(Bzr(repourl=os.path.join(bzr_toplevel, "lsb/devel/nALFS"),
+                       workdir="tools/nALFS", mode="update", timeout=4*60*60))
+    libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
+    libbat.addStep(Compile(command=["make", "libbat"], workdir="appbat"))
+    libbat.addStep(ShellCommand(command="cd rpm && make libbat",
+                                name="build-pkg", workdir="appbat"))
+    libbat.addStep(trigger.Trigger(schedulerNames=["sch-appbat-" + build_arch],
+                                   waitForFinish=False,
+                                   updateSourceStamp=False))
+
+    lsb_builds.append(
+        { 'name': 'libbat-' + build_arch, 'slavenames': buildslaves,
+          'builddir': 'libbat-' + build_arch, 'factory': libbat,
+          'category': 'lsb' })
+
+    appbat = factory.BuildFactory()
+
+    appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
+                       workdir="appbat", mode="copy", timeout=4*60*60))
+    appbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
+                                workdir="appbat"))
+    appbat.addStep(Bzr(repourl=os.path.join(bzr_toplevel, "lsb/devel/nALFS"),
+                       workdir="tools/nALFS", mode="update", timeout=4*60*60))
+
+    lsb_builds.append(
+        { 'name': 'appbat-' + build_arch, 'slavenames': buildslaves,
+          'builddir': 'appbat-' + build_arch, 'factory': appbat,
+          'category': 'lsb' })
 
 # Final build configuration
 
