Get rid of exceptions on the libbat and appbat builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -416,10 +416,14 @@ for arch in lsb_archs:
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
+    libbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
+                                workdir="appbat", name="clear-old-nalfs"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
-                                workdir="appbat"))
-    libbat.addStep(Bzr(repourl=os.path.join(bzr_toplevel, "lsb/devel/nALFS"),
-                       workdir="tools/nALFS", mode="update", timeout=4*60*60))
+                                workdir="appbat", name="create-tools-dir"))
+    libbat.addStep(ShellCommand(command=["bzr", "checkout", 
+                                         os.path.join(bzr_toplevel, 
+                                                      "lsb/devel/nALFS")],
+                                workdir="tools", name="checkout-nalfs"))
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
     libbat.addStep(Compile(command=["make", "libbat"], workdir="appbat"))
     libbat.addStep(ShellCommand(command="cd rpm && make libbat",
@@ -437,10 +441,14 @@ for arch in lsb_archs:
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
+    appbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
+                                workdir="appbat", name="clear-old-nalfs"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
                                 workdir="appbat"))
-    appbat.addStep(Bzr(repourl=os.path.join(bzr_toplevel, "lsb/devel/nALFS"),
-                       workdir="tools/nALFS", mode="update", timeout=4*60*60))
+    appbat.addStep(ShellCommand(command=["bzr", "checkout", 
+                                         os.path.join(bzr_toplevel, 
+                                                      "lsb/devel/nALFS")],
+                                workdir="tools", name="checkout-nalfs"))
 
     lsb_builds.append(
         { 'name': 'appbat-' + build_arch, 'slavenames': buildslaves,
