Quit builds when then fail, so triggers and uploads don't happen.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -334,11 +334,11 @@ for arch in lsb_archs:
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=4*60*60))
-        b.addStep(LSBBuildPackage(name="build"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="create-results-dir"))
+        b.addStep(LSBBuildPackage(name="build", haltOnFailure=True))
         b.addStep(ShellCommand(command="cp package/*.rpm ../results",
                                name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
@@ -384,13 +384,13 @@ for arch in lsb_archs:
                          os.path.join(bzr_toplevel, "lsb/devel/packaging"),
                          "../packaging"],
                 name="checkout-packaging"))
-        b.addStep(LSBBuildFromPackaging(subdir=prj,
-                                        env={"BZRTREES": ".."},
-                                        name="build"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="make-results-dir"))
+        b.addStep(LSBBuildFromPackaging(subdir=prj,
+                                        env={"BZRTREES": ".."},
+                                        name="build", haltOnFailure=True))
         b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj,
                                name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
