Use a different method to find packages after they're built.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -339,8 +339,10 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="create-results-dir"))
         b.addStep(LSBBuildPackage(name="build", haltOnFailure=True))
-        b.addStep(ShellCommand(command="cp package/*.rpm ../results",
-                               name="copy-results"))
+        b.addStep(ShellCommand(
+                command="find package -name '*.rpm' " +
+                        "-exec cp '{}' ../results ';'",
+                name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
@@ -391,8 +393,10 @@ for arch in lsb_archs:
         b.addStep(LSBBuildFromPackaging(subdir=prj,
                                         env={"BZRTREES": ".."},
                                         name="build", haltOnFailure=True))
-        b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj,
-                               name="copy-results"))
+        b.addStep(ShellCommand(
+                command="find ../packaging -name '*.rpm' " +
+                        "-exec cp '{}' ../results ';'",
+                name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
