Disable dependency triggers.
The SourceStamp keeps getting passed to the triggered builds, which
means they all end up building TET instead of the test suite.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -86,12 +86,16 @@ def add_dependency_triggers(project, arch, builder):
                                      name="update-pkgs",
                                      flunkOnFailure=False))
 
-        for subprj in lsb_dependencies[project]:
-            subprj_name = "%s-%s" % (subprj, arch)
-            builder.addStep(
-                trigger.Trigger(name="trigger-" + subprj_name,
-                                schedulerNames=['trigger-' + subprj_name],
-                                waitForFinish=False, updateSourceStamp=False))
+        # Actual dependencies are too difficult to do now; the
+        # SourceStamp of the previous build gets propagated
+        # to the dependent builds.  So let's disable for now.
+
+        #for subprj in lsb_dependencies[project]:
+        #    subprj_name = "%s-%s" % (subprj, arch)
+        #    builder.addStep(
+        #        trigger.Trigger(name="trigger-" + subprj_name,
+        #                        schedulerNames=['trigger-' + subprj_name],
+        #                        waitForFinish=False, updateSourceStamp=False))
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
