Refactor schedulers, and add a big weekly scheduler.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -170,15 +170,28 @@ for branch in lsb_change_sources:
 
 # LSB schedulers
 
-c['schedulers'] = []
+# Build the SDK daily.  Since it's not complicated, we can schedule
+# all the builds with a single scheduler.
+
+sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
+sch_build = scheduler.Nightly(name="build-sdk", branch=None,
+                              builderNames=sch_sdk_names, hour=19, minute=0)
+
+c['schedulers'] = [sch_build]
+
+# Collect project names for the weekly scheduler.
+
+sch_weekly_names = []
+
+# The rest of the schedulers (except the weekly one) react to events, 
+# such as a previous build succeeding or a change in version control,
+# and so have to be defined per project and per architecture.  These
+# first schedulers handle updating the SDK after a successful build,
+# as well as the appbat.
 
 for arch in lsb_archs:
-    sch_build = scheduler.Nightly(name="build-sdk-" + arch, branch=None,
-                                  builderNames=["build-sdk-" + arch],
-                                  hour=19, minute=0)
-    sch_update = scheduler.Dependent(name="update-sdk-" + arch,
-                                     upstream=sch_build,
-                                     builderNames=["update-sdk-" + arch])
+    sch_update = scheduler.Triggerable(name="update-sdk-" + arch,
+                                       builderNames=["update-sdk-" + arch])
     sch_libbat = scheduler.Scheduler(name="sch-libbat-" + arch,
                                      branch="lsb/devel/appbat",
                                      builderNames=["libbat-" + arch],
@@ -186,7 +199,11 @@ for arch in lsb_archs:
     sch_appbat = scheduler.Triggerable(name="sch-appbat-" + arch,
                                        builderNames=["appbat-" + arch])
 
-    c['schedulers'].extend([sch_build, sch_update, sch_libbat, sch_appbat])
+    c['schedulers'].extend([sch_update, sch_libbat, sch_appbat])
+
+    sch_weekly_names.append("libbat-" + arch)
+
+# Package subdir schedulers.
 
 for prj in lsb_pkg_subdir_projects:
     if prj in lsb_arch_indep_projects:
@@ -208,6 +225,10 @@ for prj in lsb_pkg_subdir_projects:
                 c['schedulers'].append(sch)
                 break
 
+        sch_weekly_names.append(prj_name)
+
+# Packaging project schedulers.
+
 for (prj, repo) in lsb_packaging_projects:
     if prj in lsb_arch_indep_projects:
         archlist = [lsb_buildslave_arch_indep_arch]
@@ -222,6 +243,16 @@ for (prj, repo) in lsb_packaging_projects:
                                          builderNames=[prj_name],
                                          treeStableTimer=stable_timer_seconds)
         c['schedulers'].append(sch)
+
+        sch_weekly_names.append(prj_name)
+
+# Finally, the big weekly scheduler.  This makes sure every non-SDK
+# project is built at least once a week.
+
+sch_weekly = scheduler.Nightly(name="sch-weekly", branch=None,
+                               builderNames=sch_weekly_names,
+                               dayOfWeek=5, hour=0, minute=0)
+c['schedulers'].append(sch_weekly)
 
 
 ####### BUILDERS
@@ -303,6 +334,10 @@ for arch in lsb_archs:
     build_sdk.addStep(
         FileUpload(slavesrc="../sdk-results.tar.gz", 
                    masterdest="lsb-sdk-results-%s.tar.gz" % arch))
+    build_sdk.addStep(
+        trigger.Trigger(name="trigger-update-sdk-" + arch,
+                        schedulerNames=['update-sdk-' + arch],
+                        waitForFinish=False, updateSourceStamp=False))
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
