--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -379,7 +379,7 @@ for arch in lsb_archs:
                                name="create-results-dir"))
         b.addStep(LSBBuildPackage(name="build", haltOnFailure=True))
         b.addStep(ShellCommand(
-                command="find package -name '*.rpm' " +
+                command="find -L package -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
                 name="copy-results"))
         b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
