Finish the libbat build configuration.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -467,10 +467,26 @@ for arch in lsb_archs:
                                          os.path.join(bzr_toplevel, 
                                                       "lsb/devel/nALFS")],
                                 workdir="tools", name="checkout-nalfs"))
+    libbat.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
+                                workdir="appbat", name="clear-old-results"))
+    libbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
+                                workdir="appbat", name="create-results-dir"))
     libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
-    libbat.addStep(Compile(command=["make", "libbat"], workdir="appbat"))
+    libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
+                           workdir="appbat"))
     libbat.addStep(ShellCommand(command="cd rpm && make libbat",
                                 name="build-pkg", workdir="appbat"))
+    libbat.addStep(ShellCommand(
+            command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
+            workdir="appbat", name="copy-results"))
+    libbat.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                         "../results"],
+                                workdir="appbat", name="pack-results"))
+    libbat.addStep(
+        FileUpload(slavesrc="../results.tar.gz", 
+                   masterdest="libbat-results-%s.tar.gz" % build_arch,
+                   workdir="appbat", name="upload-results"))
+    add_dependency_triggers("libbat", build_arch, libbat)
     libbat.addStep(trigger.Trigger(schedulerNames=["sch-appbat-" + build_arch],
                                    waitForFinish=False,
                                    updateSourceStamp=False))
