Create a real appbat build based on the libbat build.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -503,11 +503,36 @@ for arch in lsb_archs:
     appbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
-                                workdir="appbat"))
+                                workdir="appbat", name="create-tools-dir"))
     appbat.addStep(ShellCommand(command=["bzr", "checkout", 
                                          os.path.join(bzr_toplevel, 
                                                       "lsb/devel/nALFS")],
                                 workdir="tools", name="checkout-nalfs"))
+    appbat.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
+                                workdir="appbat", name="clear-old-results"))
+    appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
+                                workdir="appbat", name="create-results-dir"))
+    appbat.addStep(Configure(command=["./configure"], workdir="appbat"))
+    appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
+                           workdir="appbat", name="build-appbat"))
+    appbat.addStep(Compile(command=["make", "desktop", 
+                                    "ENTITYCHECK_QUIET=-q"], 
+                           workdir="appbat", name="build-desktop"))
+    appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
+                           workdir="appbat", name="build-addons"))
+    appbat.addStep(ShellCommand(command="cd rpm && make",
+                                name="build-pkg", workdir="appbat"))
+    appbat.addStep(ShellCommand(
+            command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
+            workdir="appbat", name="copy-results"))
+    appbat.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                         "../results"],
+                                workdir="appbat", name="pack-results"))
+    appbat.addStep(
+        FileUpload(slavesrc="../results.tar.gz", 
+                   masterdest="appbat-results-%s.tar.gz" % build_arch,
+                   workdir="appbat", name="upload-results"))
+    add_dependency_triggers("appbat", build_arch, appbat)
 
     lsb_builds.append(
         { 'name': 'appbat-' + build_arch, 'slavenames': buildslaves,
