Fix some build issues.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -78,7 +78,8 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 
 def add_dependency_triggers(project, arch, builder):
     pkg_install_command = \
-        "ls ../results/*.rpm | egrep -v src.rpm | xargs sudo rpm -Uvh"
+        "ls ../results/*.rpm | egrep -v src.rpm | " + \
+        "xargs sudo rpm -Uvh --force"
     if project in lsb_dependencies:
         prj_name = "%s-%s" % (project, arch)
 
@@ -514,12 +515,15 @@ for arch in lsb_archs:
                                 workdir="appbat", name="create-results-dir"))
     appbat.addStep(Configure(command=["./configure"], workdir="appbat"))
     appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-appbat"))
+                           workdir="appbat", name="build-appbat", 
+                           timeout=1800))
     appbat.addStep(Compile(command=["make", "desktop", 
                                     "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-desktop"))
+                           workdir="appbat", name="build-desktop", 
+                           timeout=1800))
     appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-addons"))
+                           workdir="appbat", name="build-addons",
+                           timeout=1800))
     appbat.addStep(ShellCommand(command="cd rpm && make",
                                 name="build-pkg", workdir="appbat"))
     appbat.addStep(ShellCommand(
